// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Rangeslider -  renders with a value label 1`] = `
<Rangeslider
  valueLabel={true}
>
  <div
    className="rangeslider"
  >
    

    <input
      type="range"
    />
    

    <ValueLabel>
      <div
        className="value-label"
      >
        

        <p>
          

          <span
            data-px-rangeslider-value={true}
          />
          

        </p>
        

      </div>
    </ValueLabel>
  </div>
</Rangeslider>
`;

exports[`Component: Rangeslider -  renders with a value label and a value label postfix 1`] = `
<Rangeslider
  valueLabel={true}
  valueLabelPostfix="test"
>
  <div
    className="rangeslider"
  >
    

    <input
      type="range"
    />
    

    <ValueLabel>
      <div
        className="value-label"
      >
        

        <p>
          

          <span
            data-px-rangeslider-value={true}
          />
          

          <span>
            test
          </span>
          

        </p>
        

      </div>
    </ValueLabel>
  </div>
</Rangeslider>
`;

exports[`Component: Rangeslider -  renders with a value label and a value label prefix 1`] = `
<Rangeslider
  valueLabel={true}
  valueLabelPrefix="test"
>
  <div
    className="rangeslider"
  >
    

    <input
      type="range"
    />
    

    <ValueLabel>
      <div
        className="value-label"
      >
        

        <p>
          

          <span>
            test
          </span>
          

          <span
            data-px-rangeslider-value={true}
          />
          

        </p>
        

      </div>
    </ValueLabel>
  </div>
</Rangeslider>
`;

exports[`Component: Rangeslider -  renders without label 1`] = `
<Rangeslider>
  <div
    className="rangeslider"
  >
    

    <input
      type="range"
    />
    

  </div>
</Rangeslider>
`;
